<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:hint="@string/login_Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_Password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_login_button"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/login_registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_Register_or_Login"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>