<resources>
    <string name="app_name">AND1 EXAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quiz App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">Question List</string>
    <string name="menu_profile">Profile</string>

    <string name="home_second">Home Second</string>

    <string name="login_Email">Email</string>
    <string name="login_Password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_Register_or_Login">Register</string>


    <string name="home_get_question">Get new question</string>
    <string name="google_question">Google this!</string>


    <string name="list_introduction">Select a category and the system will display a list of all the questions with selected category</string>

    <string name="profile_username">Current Username</string>
    <string name="profile_email">Current Email</string>
    <string name="profile_logout_button">LOG OUT</string>
    <string name="profile_change_password_button">CHANGE PASSWORD</string>
    <string name="profile_delete_account_button">DELETE ACCOUNT</string>

    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_register_button">REGISTER AND LOGIN</string>


    <string name="home_introduction">Welcome to the simple quiz app. In order to get a new random question press the button</string>

    <string-array name="category_array">
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>General Knowledge</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>"Entertainment: Cartoon &amp; Animations</item>
    </string-array>



</resources>
