<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:hint="@string/register_email"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/register_password"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textPassword"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/register_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/register_confirm_password"
                    android:inputType="textPassword"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/register_registerButton"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_register_button"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

    </ScrollView>

</FrameLayout>